--- a/skins/Quaver/DJMAX Respect/skin.ini
+++ b/skins/Quaver/DJMAX Respect/skin.ini
@@ -26,6 +26,7 @@ ComboDisplayScale = 45
 ComboPosX = 0
 ComboPosY = -40
 DeadNoteColor = 200,200,200
+DefaultSkin = Bar
 DrawLongNoteEnd = True
 FlipNoteEndImagesOnUpscroll = True
 FlipNoteImagesOnUpscroll = True
@@ -38,13 +39,13 @@ HitErrorChevronSize = 8
 HitErrorHeight = 10
 HitErrorPosX = 0
 HitErrorPosY = -200
+HitLightingScale = 200
 HitLightingFps = 60
-HitLightingHeight = 200
-HitLightingWidth = 200
 HitLightingX = 0
-HitLightingY = -35
+HitLightingY = -25
 HitPosOffsetY = 58
 HoldLightingFps = 60
+HoldLightingScale = 200
 JudgementBurstPosY = -250
 JudgementCounterAlpha = 1
 JudgementCounterFontColor = 255,255,255
