--- a/skins/Quaver/DJMAX Respect/skin.ini
+++ b/skins/Quaver/DJMAX Respect/skin.ini
@@ -83,21 +83,25 @@ BattleRoyaleAlertPosY = -150
 BattleRoyaleAlertScale = 110
 BattleRoyaleEliminatedPosX = 0
 BattleRoyaleEliminatedPosY = -115
-BgMaskAlpha = 1
+BgMaskAlpha = 0.75
 BgMaskPadding = 0
 ColorObjectsBySnapDistance = False
-ColumnAlignment = -110
-ColumnColor1 = 255,255,255
-ColumnColor2 = 255,255,255
-ColumnColor3 = 255,255,255
-ColumnColor4 = 255,255,255
-ColumnLightingOffsetY = 114
-ColumnLightingScale = 1.0
-ColumnSize = 60
+ColumnAlignment = 0
+ColumnColor1 = 255,64,129
+ColumnColor2 = 255,64,129
+ColumnColor3 = 255,64,129
+ColumnColor4 = 255,64,129
+ColumnColor5 = 255,64,129
+ColumnColor6 = 255,64,129
+ColumnColor7 = 255,64,129
+ColumnLightingOffsetY = 0
+ColumnLightingScale = 0.3
+ColumnSize = 88
 ComboDisplayScale = 45
 ComboPosX = 0
 ComboPosY = -40
 DeadNoteColor = 200,200,200
+DefaultSkin = Bar
 DrawLongNoteEnd = True
 FlipNoteEndImagesOnUpscroll = True
 FlipNoteImagesOnUpscroll = True
@@ -109,15 +113,14 @@ HealthBarScale = 100
 HitErrorChevronSize = 8
 HitErrorHeight = 10
 HitErrorPosX = 0
-HitErrorPosY = 45
+HitErrorPosY = -200
+HitLightingScale = 200
 HitLightingFps = 60
-HitLightingHeight = 100
-HitLightingWidth = 210
 HitLightingX = 0
-HitLightingY = 28
-HitPosOffsetY = 58
+HitLightingY = -60
+HitPosOffsetY = 28
 HoldLightingFps = 60
-JudgementBurstPosY = 108
+JudgementBurstPosY = 200
 JudgementCounterAlpha = 1
 JudgementCounterFontColor = 255,255,255
 JudgementCounterSize = 40
@@ -129,8 +132,8 @@ NotePadding = 0
 RatingDisplayPosX = 10
 RatingDisplayPosY = 8
 RatingDisplayScale = 18
-ReceptorPosOffsetY = 5
-ReceptorsOverHitObjects = False
+ReceptorPosOffsetY = 0
+ReceptorsOverHitObjects = True
 ScoreDisplayPosX = 10
 ScoreDisplayPosY = 5
 ScoreDisplayScale = 18
@@ -141,6 +144,3 @@ StageReceptorPadding = 0
 TimingBarPixelSize = 2
 TimingLineColor = 255,255,255
 UseAndRotateHitObjectSheet = False
-ColumnColor5 = 255,255,255
-ColumnColor6 = 255,255,255
-ColumnColor7 = 255,255,255
